--- a/public/t&c/t&c.css
+++ b/public/t&c/t&c.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@700&display=swap');
 
 *{
-    font-family: sans-serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     margin:0; padding:0;
     box-sizing: border-box;
     outline: none; border:none;
